// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unlockEQROCMSEmail > renders CMS email for unlocked EQRO contract as expected 1`] = `
"Submission MCR-MN-0004-SNBC was unlocked<br />
<br />
<b>Unlocked by:</b> leslie@example.com<br />
<b>Unlocked on:</b> 12/31/2021<br />
<b>Reason for unlock:</b> Adding rate development guide.<br />
<br />
You will receive another notification when the state resubmits.
"
`;

exports[`unlockPackageCMSEmail > renders overall email as expected 1`] = `
"Submission MCR-MN-0004-SNBC was unlocked<br />
<br />
<b>Unlocked by:</b> leslie@example.com<br />
<b>Unlocked on:</b> 12/31/2021<br />
<b>Reason for unlock:</b> Adding rate development guide.<br />
<b>Rate name</b>: Rate Cert Name<br />
<br />
You will receive another notification when the state resubmits.
"
`;
